--- a/prvni.html
+++ b/prvni.html
@@ -8,7 +8,7 @@
 
     <body>
         <script type="text/javascript">
-            document.write("Ahoj ITnetwork!");
+            document.write("Ahoj vole!");
         </script>
     </body>
 </html>
