--- a/prvni.html
+++ b/prvni.html
@@ -8,7 +8,10 @@
 
     <body>
         <script type="text/javascript">
-            document.write("Ahoj   vole!");
+           let d = new Date();
+            if (d.getHours() >= 18) {
+            document.write("Je po šesté hodině.");
+}
         </script>
     </body>
 </html>
