--- a/prvni.html
+++ b/prvni.html
@@ -10,7 +10,8 @@
         <script type="text/javascript">
            let d = new Date();
             if (d.getHours() >= 18) {
-            document.write("Je po šesté hodině.");
+            document.writeln("Je po šesté hodině.");
+            document.write("Tak nám dej pokoj!");
 }
         </script>
     </body>
