js script do souboru.js

--- a/dom_kalkulacka.html
+++ b/dom_kalkulacka.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="cs-cz">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Jednoduchá webová kalkulačka</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Jednoduchá webová klukačka</title>
+    <script src="js/kalkulacka.js"></script>
+</head>
 
-    <body>
-        <h1>Jednoduchá webová kalkulačka</h1>
-        <input type="text" id="cislo1" size="5" /> + <input type="text" id="cislo2" size="5" />
-        <button id="tlacitko">Sečti!</button>
-        <script type="text/javascript">
-            // Sem budeme psát náš kód
-        </script>
-    </body>
+<body>
 
-</html> 
+    <h1> Jednoduchá webová kalkulačka</h1>
+    <input type="text" id="cislo1" size="5" /> + <input type="text" id="cislo2" size="5" />
+    <button id="tlacitko">Sečti!</button>
+
+</body>
+
+</html>
